# bdt2

./: .gitignore  LICENSE
c/: .gitignore  CMakeLists.txt  cconfig.cmake  hiwifi3.cmake  hiwifigx.cmake  peer信息存储表.vsdx
c/3rd/libuv-1.29.1/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
c/3rd/libuv-1.29.1/include/: uv.h
c/3rd/libuv-1.29.1/src/: fs-poll.c  idna.c  idna.h  inet.c  strscpy.c  strscpy.h  threadpool.c  timer.c  uv-common.c  uv-common.h  uv-data-getter-setters.c
c/3rd/mbedtls-2.16.1/: CMakeLists.txt
c/3rd/sqlite3-3.29.0/: CMakeLists.txt  Makefile  cmake_install.cmake
c/3rd/zlib-1.2.11/: CMakeLists.txt
c/Profiler/: CMakeLists.txt  TestCase.h  main.c
c/Profiler/Global/: Base.imp.inl  CryptoToolkit.imp.inl  GlobalTest.c  Test.h
c/UnitTests/: CMakeLists.txt  main.c
c/UnitTests/Global/: CryptoToolkit.c  Endpoint.imp.inl  GlobalTest.c  Test.h
c/UnitTests/History/: HistoryTest.c  PeerHistory.imp.inl  Test.h
c/UnitTests/Interface/: TcpInterface.c
c/UnitTests/Protocol/: Package.imp.inl  ProtocolTest.c  Test.h
c/UnitTests/SnClient/: SuperNodeClient.imp.inl  SuperNodeClientTest.c  Test.h
c/src/BDTCore/: BdtCore.h  BdtSystemFramework.c  BdtSystemFramework.h  CMakeLists.txt  EventCenter.c  EventCenter.h  PeerFinder.c  PeerFinder.h  Stack.c  Stack.h
c/src/BDTCore/Connection/: Connection.h  Connection.imp.inl  Connection.inl  ConnectionManager.h  ConnectionManager.imp.inl  ConnectionManager.inl  ConnectionModule.c  ConnectionModule.h  StreamConnection.imp.inl  StreamConnection.inl
c/src/BDTCore/Global/: CryptoToolKit.h  CryptoToolkit.imp.inl  Endpoint.imp.inl  GlobalModule.c  IdCreator.h  IdCreator.imp.inl  Module.h  PeerInfo.h  PeerInfo.imp.inl  Peerid.imp.inl  SequenceCreator.h  SequenceCreator.imp.inl  StackTls.h  StackTls.imp.inl  Statistics.h  Statistics.imp.inl  TimerHelper.h  TimerHelper.imp.inl
c/src/BDTCore/History/: HistoryModule.c  KeyManager.h  KeyManager.imp.inl  Module.h  Storage.h  Storage.imp.inl  Storage.inl  TunnelHistory.h  TunnelHistory.imp.inl  Updater.h  Updater.imp.inl
c/src/BDTCore/Interface/: InterfaceModule.c  InterfaceModule.h  NetManager.h  NetManager.imp.inl  NetManager.inl  TcpInterface.h  TcpInterface.imp.inl  TcpInterface.inl  UdpInterface.h  UdpInterface.imp.inl  UdpInterface.inl
c/src/BDTCore/Protocol/: Package.h  Package.imp.inl  Package.inl  PackageDecoder.h  PackageDecoder.imp.inl  PackageDecoder.inl  PackageEncoder.h  PackageEncoder.imp.inl  PackageEncoder.inl  PackageImp.imp.inl  ProtocolModule.c  ProtocolModule.h  packages.js
c/src/BDTCore/SnClient/: CallSession.h  CallSession.imp.inl  CallSession.inl  Client.h  Client.imp.inl  Client.inl  Ping.imp.inl  Ping.inl  SnClientModule.c  SnClientModule.h
c/src/BDTCore/Tunnel/: SocketTunnel.h  SocketTunnel.imp.inl  SocketTunnel.inl  TcpTunnel.h  TcpTunnel.imp.inl  TcpTunnel.inl  TunnelBuildAction.imp.inl  TunnelBuildAction.inl  TunnelBuilder.h  TunnelBuilder.imp.inl  TunnelBuilder.inl  TunnelContainer.h  TunnelContainer.imp.inl  TunnelContainer.inl  TunnelManager.h  TunnelManager.imp.inl  TunnelManager.inl  TunnelModule.c  TunnelModule.h  UdpTunnel.h  UdpTunnel.imp.inl  UdpTunnel.inl
c/src/BuckyBase/: BuckyBase.h  CMakeLists.txt
c/src/BuckyBase/Atomic/: atomic.c  atomic.h  atomic_gcc.h  atomic_msvc.h
c/src/BuckyBase/Buffer/: Buffer.h  bucky_buffer.c  buffer_data.inl  buffer_stream.c  buffer_stream.h  stack_buffer.c  stack_buffer.h  thread_buffer.c  thread_buffer.h
c/src/BuckyBase/Coll/: hash.c  hash.h  list.c  list.h  vector.h
c/src/BuckyBase/File/: bucky_file.c  file.h
c/src/BuckyBase/Global/: base.h  basic_type.h  compiler_specific.h  e_int.h  global_config.h  platform_headers.h  platform_specific.h  release_config.h  result.h
c/src/BuckyBase/Lock/: rw_lock.h  rw_lock_uv.c  rw_lock_uv.inl  thread_lock.h  thread_lock_uv.c  thread_lock_uv.inl
c/src/BuckyBase/Memory/: byte_order.c  byte_order.h  memory.c  memory.h
c/src/BuckyBase/Path/: bucky_path.c  path.h
c/src/BuckyBase/Random/: bucky_random.c  random.h  random_posix.inl  random_win.inl
c/src/BuckyBase/String/: bucky_string.c  sds.c  sds.h  string.h
c/src/BuckyBase/TLS/: tls.h  tls_uv.c
c/src/BuckyBase/Time/: bucky_time.c  posix.inl  time.h  win.inl
c/src/BuckyBase/Transcode/: ConvertUTF.cpp  ConvertUTF.h  bucky_transcode.c  transcode.h
c/src/BuckyBase/crt/: bucky_crt.c  crt.h  crt_raw.inl
c/src/BuckyBase/debug/: bucky_debug.c  debug.h  debug_posix.inl  debug_win.inl
c/src/BuckyBase/events/: event_emitter.c  event_emitter.h
c/src/BuckyBase/log/: blog.h  blog_config.h  blog_console.inl  blog_decl.h  blog_file.c  (+14 more)
c/src/BuckyFramework/: CMakeLists.txt  framework.h  internal.h  uv_comnon.h
c/src/SGLib/: SGLib.h
c/src/Stat/: Protocol.inl  ReportInterface.imp.inl  ReportInterface.inl  Stat.h  Stat.imp.inl  Stat.inl  StatModule.c  protocol.js
c/test/: democode.js
c/test/autoTestDemo/: CMakeLists.txt  arm_dump.h  conn.c  conn.h  demo.c  demo.h  dump.h  lpc_client.c  lpc_client.h  main.c  sys_res.c  sys_res.h  sys_res_linux.inl  sys_res_win.inl  unix_dump.h
c/test/bdtCoreTest/: CMakeLists.txt  bdtCoreTest.h  main.c  test_package_conn.c  test_peerid.c  test_stream_conn.c  test_stream_conn_ipv6.c
c/test/buckyBaseTest/: CMakeLists.txt  main.c  test_buffer.c  test_byte_order.c  test_debug.c  test_events.c  test_frame_timer.c  test_list.c  test_lock.c  test_log.c  test_path.c  test_random.c  test_ref.c  test_string.c  test_tcp.c  test_thread.c  test_thread_buffer.c  test_udp.c
c/test/frameworkTest/: CMakeLists.txt  frameworkTest.c  timer.c  udptest.c
c/test/packageConnTest/: CMakeLists.txt  exchangePeerinfo.c  exchangePeerinfo.h  main.c  node.c  node.h
node/: .gitignore  CMakeLists.txt  gulpfile.js  index.d.ts  index.js  package-lock.json  package.json  recv_model.js  tslint.json
node/js-c/: CMakeLists.txt  Connection.cpp  Connection.h  Global.cpp  Global.h  NetModifier.cpp  NetModifier.h  PeerInfo.cpp  PeerInfo.h  Stack.cpp  Stack.h  main.cpp
node/test/: test_conn.js
snserver/src/js-c/: CMakeLists.txt  binding.gyp  main.c  protocol.c  protocol.ts
(+336 files in other folders)
